k8s/base-resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-minikube-service
  namespace: test
spec:
  selector:
    app: hello-minikube
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
