k8s/base-resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-minikube-ingress
  # namespace: test
spec:
  rules:
  - host: hello-minikube.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-minikube-service
            port:
              number: 8080
